# Credify

./: .gitignore  API_REFERENCE.md  ASYNC_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  MIGRATION_GUIDE.md  PROJECT_STATUS.md  PUBLISHING.md  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.4.0.md  TEMPLATE_USAGE.md
.github/workflows/: ci.yml  release.yml
examples/: README.md  ai_agent.rs  api_comparison.rs  basic.rs  batch_validation.rs  llm_friendly.rs  llm_simple.rs  rig_async_proper.rs  rig_complete_integration.rs  rig_ergonomic.rs  rig_integration.rs  rig_mock_xai.rs  rig_working_example.rs  rig_xai_simple.rs
src/: lib.rs  main.rs  rig_helpers.rs
tests/: ai_integration_tests.rs  test_404_detection.rs
