[package]
name = "linkedin-profile-validator"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Hamze Ghalebi <hamze.ghalebi@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Rust library to validate LinkedIn profile URLs by checking format and profile existence"
documentation = "https://docs.rs/linkedin-profile-validator"
homepage = "https://github.com/RustSandbox/linkedin_profile_validator"
repository = "https://github.com/RustSandbox/linkedin_profile_validator"
readme = "README.md"
keywords = ["linkedin", "url", "validation", "profile", "checker"]
categories = ["web-programming", "web-programming::http-client", "parsing"]
exclude = [
    ".github/*",
    ".gitignore",
    "tests/*",
    "benches/*",
]

[lib]
name = "linkedin_profile_validator"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
url = "2.5"
regex = "1.11"
thiserror = "2.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
pretty_assertions = "1.4"
