[package]
name = "credify"
version = "0.2.01"
edition = "2021"
rust-version = "1.70"
authors = ["Hamze Ghalebi <hamze.ghalebi@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Rust library for validating LinkedIn profile URLs with LLM-friendly error messages"
documentation = "https://docs.rs/credify"
homepage = "https://github.com/RustSandbox/Credify"
repository = "https://github.com/RustSandbox/Credify"
readme = "README.md"
keywords = ["linkedin", "validation", "url", "profile", "llm"]
categories = ["web-programming", "web-programming::http-client", "parsing"]
exclude = [
    ".github/*",
    ".gitignore",
    "tests/*",
    "benches/*",
    "target/*",
    "Cargo.lock",
    "credify_logo.png",
    "RELEASE_NOTES_v*.md",
    "PUBLISH_INSTRUCTIONS.md",
]

[lib]
name = "credify"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
url = "2.5"
regex = "1.11"
thiserror = "2.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
once_cell = "1.20"
chrono = "0.4.41"

[dev-dependencies]
pretty_assertions = "1.4"
